# ProjectEulerRust

./: Cargo.toml  LICENSE.md  README.md
src/: factors.rs  lib.rs  misc.rs  numbers.rs  triangle_path.rs
src/series/: ap.rs  collatz.rs  fib.rs  mod.rs  squares.rs  triangles.rs
