[package]
name = "project_euler_solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
test-case = "2.2.2"

[dependencies]
memoize = "0.3.1"
itertools = "0.10.5"
num = "0.4.0"
substring = "1.4.5"
num-bigint = "0.4.3"
num-traits = "0.2"
chrono = "0.4"